<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rr.mybigandroidappexercise.MainActivity">

    <RelativeLayout
        android:id="@+id/first_name_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name_label"
            android:layout_toLeftOf="@+id/first_name_spacer"/>

        <View
            android:id="@+id/first_name_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_alignBaseline="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/first_name_spacer"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/last_name_container"
        android:layout_below="@+id/first_name_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_label"
            android:layout_toLeftOf="@+id/last_name_spacer"/>

        <View
            android:id="@+id/last_name_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_alignBaseline="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/last_name_spacer"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/address_container"
        android:layout_below="@+id/last_name_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:layout_toLeftOf="@+id/address_spacer"/>

        <View
            android:id="@+id/address_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_alignBaseline="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/address_spacer"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/telephone_container"
        android:layout_below="@+id/address_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telephone_label"
            android:layout_toLeftOf="@+id/telephone_spacer"/>

        <View
            android:id="@+id/telephone_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/etTelephone"
            android:layout_alignBaseline="@+id/tvTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/telephone_spacer"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/email_container"
        android:layout_below="@+id/telephone_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:layout_toLeftOf="@+id/email_spacer"/>

        <View
            android:id="@+id/email_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_alignBaseline="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/email_spacer"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_marginTop="10dp"
        android:layout_below="@id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAdd"
            android:text="@string/add_label"
            android:layout_toLeftOf="@+id/button_spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/button_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btnClear"
            android:text="@string/clear_label"
            android:layout_toRightOf="@+id/button_spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_view_container"
        android:layout_marginTop="10dp"
        android:layout_below="@id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnView"
            android:text="@string/view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
