<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rr.mybigandroidappexercise.DetailsActivity">

    <RelativeLayout
        android:id="@+id/first_name_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name_label"
            android:layout_toLeftOf="@+id/first_name_spacer"/>

        <View
            android:id="@+id/first_name_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvFirstNameVal"
            android:layout_toRightOf="@+id/first_name_spacer"
            android:layout_alignBaseline="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/last_name_container"
        android:layout_below="@+id/first_name_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_label"
            android:layout_toLeftOf="@+id/last_name_spacer"/>

        <View
            android:id="@+id/last_name_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvLastNameVal"
            android:layout_toRightOf="@+id/last_name_spacer"
            android:layout_alignBaseline="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/address_container"
        android:layout_below="@+id/last_name_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:layout_toLeftOf="@+id/address_spacer"/>

        <View
            android:id="@+id/address_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvAddressVal"
            android:layout_toRightOf="@+id/address_spacer"
            android:layout_alignBaseline="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/telephone_container"
        android:layout_below="@+id/address_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telephone_label"
            android:layout_toLeftOf="@+id/telephone_spacer"/>

        <View
            android:id="@+id/telephone_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvTelephoneVal"
            android:layout_toRightOf="@+id/telephone_spacer"
            android:layout_alignBaseline="@+id/tvTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/email_container"
        android:layout_below="@+id/telephone_container"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:layout_toLeftOf="@+id/email_spacer"/>

        <View
            android:id="@+id/email_spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tvEmailVal"
            android:layout_toRightOf="@+id/email_spacer"
            android:layout_alignBaseline="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_below="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.MapFragment"/>

    </RelativeLayout>

</RelativeLayout>
